Testing MoveData NaN substitution using basic_eval_analysis.ipynb

--- a/Analysis/basic_eval_analysis.ipynb
+++ b/Analysis/basic_eval_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "10d5b61a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "21b577d7",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "1             300+0  Time forfeit  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1c1ba4a6",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "8a2eadb5",
    "metadata": {},
    "outputs": [
@@ -412,6 +412,15 @@
        "      <td>0:00:21</td>\n",
        "      <td>-2.73</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -432,6 +441,7 @@
        "11                Nbd2    0:00:14       -3.15         h6    0:00:23   \n",
        "12                 Bh4    0:00:11       -3.00        Ba6    0:00:23   \n",
        "13                  b3    0:00:02       -4.14        Nf4    0:00:21   \n",
+       "14                 NaN        NaN         NaN        NaN        NaN   \n",
        "\n",
        "             black_eval  \n",
        "move_number              \n",
@@ -447,7 +457,8 @@
        "10                -0.12  \n",
        "11                -2.99  \n",
        "12                -0.12  \n",
-       "13                -2.73  "
+       "13                -2.73  \n",
+       "14                  NaN  "
       ]
      },
      "metadata": {},
@@ -469,12 +480,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2599cfd",
+   "metadata": {},
+   "source": [
+    "## Test PGN without clock or eval values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2b51b95d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pgn_path = 'Data/pgn_mentor_sample.pgn'\n",
+    "basic_move_data = MoveData(pgn_path)\n",
+    "basic_moves_dict = move_data.to_dict()\n",
+    "\n",
+    "print(f\"Moves extracted for {len(moves_dict)} games\")\n",
+    "\n",
+    "# Display moves from first game\n",
+    "if len(moves_dict) > 0:\n",
+    "    print(\"\\nSample moves from Game 1:\")\n",
+    "    first_game_moves = move_data.get_game_moves(1)\n",
+    "    display(first_game_moves)"
+   ]
   }
  ],
  "metadata": {
