--- a/Analysis/basic_eval_analysis.ipynb
+++ b/Analysis/basic_eval_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "10d5b61a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "21b577d7",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "1             300+0  Time forfeit  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,8 +175,7 @@
     "df_meta = metadata.to_dataframe()\n",
     "\n",
     "print(f\"Total games loaded: {len(df_meta)}\")\n",
-    "print(f\"\\nColumns available: {list(df_meta.columns)}\")\n",
-    "df_meta.head()"
+    "print(f\"\\nColumns available: {list(df_meta.columns)}\")"
    ]
   },
   {
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "1c1ba4a6",
    "metadata": {},
    "outputs": [
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "8a2eadb5",
    "metadata": {},
    "outputs": [
@@ -489,21 +488,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2b51b95d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moves extracted for 1 games\n",
+      "\n",
+      "Sample moves from Game 1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>white_move</th>\n",
+       "      <th>white_time</th>\n",
+       "      <th>white_eval</th>\n",
+       "      <th>black_move</th>\n",
+       "      <th>black_time</th>\n",
+       "      <th>black_eval</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>move_number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>e5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nf3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nxe5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Qf6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>d4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>d6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nc4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fxe4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Nc3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ne7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>d5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Qg6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>h3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Bf4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bf5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Qd4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>a6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>a4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Nd7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>O-O-O</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Nf6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Bxd6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cxd6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Nxd6+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kd7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Nxb7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Nc8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>d6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ke8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Qe5+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kd7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Bb5+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>axb5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Qxb5+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ke6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Nd8#</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            white_move  white_time  white_eval black_move  black_time  \\\n",
+       "move_number                                                             \n",
+       "1                   e4         NaN         NaN         e5         NaN   \n",
+       "2                  Nf3         NaN         NaN         f5         NaN   \n",
+       "3                 Nxe5         NaN         NaN        Qf6         NaN   \n",
+       "4                   d4         NaN         NaN         d6         NaN   \n",
+       "5                  Nc4         NaN         NaN       fxe4         NaN   \n",
+       "6                  Nc3         NaN         NaN        Ne7         NaN   \n",
+       "7                   d5         NaN         NaN        Qg6         NaN   \n",
+       "8                   h3         NaN         NaN         h5         NaN   \n",
+       "9                  Bf4         NaN         NaN        Bf5         NaN   \n",
+       "10                 Qd4         NaN         NaN         a6         NaN   \n",
+       "11                  a4         NaN         NaN        Nd7         NaN   \n",
+       "12               O-O-O         NaN         NaN        Nf6         NaN   \n",
+       "13                Bxd6         NaN         NaN       cxd6         NaN   \n",
+       "14               Nxd6+         NaN         NaN        Kd7         NaN   \n",
+       "15                Nxb7         NaN         NaN        Nc8         NaN   \n",
+       "16                  d6         NaN         NaN        Ke8         NaN   \n",
+       "17                Qe5+         NaN         NaN        Kd7         NaN   \n",
+       "18                Bb5+         NaN         NaN       axb5         NaN   \n",
+       "19               Qxb5+         NaN         NaN        Ke6         NaN   \n",
+       "20                Nd8#         NaN         NaN        NaN         NaN   \n",
+       "\n",
+       "             black_eval  \n",
+       "move_number              \n",
+       "1                   NaN  \n",
+       "2                   NaN  \n",
+       "3                   NaN  \n",
+       "4                   NaN  \n",
+       "5                   NaN  \n",
+       "6                   NaN  \n",
+       "7                   NaN  \n",
+       "8                   NaN  \n",
+       "9                   NaN  \n",
+       "10                  NaN  \n",
+       "11                  NaN  \n",
+       "12                  NaN  \n",
+       "13                  NaN  \n",
+       "14                  NaN  \n",
+       "15                  NaN  \n",
+       "16                  NaN  \n",
+       "17                  NaN  \n",
+       "18                  NaN  \n",
+       "19                  NaN  \n",
+       "20                  NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "pgn_path = 'Data/pgn_mentor_sample.pgn'\n",
-    "basic_move_data = MoveData(pgn_path)\n",
+    "basic_pgn_path = '../Data/pgn_mentor_sample.pgn'\n",
+    "basic_move_data = MoveData(basic_pgn_path)\n",
     "basic_moves_dict = move_data.to_dict()\n",
     "\n",
-    "print(f\"Moves extracted for {len(moves_dict)} games\")\n",
+    "print(f\"Moves extracted for {len(basic_moves_dict)} games\")\n",
     "\n",
     "# Display moves from first game\n",
-    "if len(moves_dict) > 0:\n",
+    "if len(basic_moves_dict) > 0:\n",
     "    print(\"\\nSample moves from Game 1:\")\n",
-    "    first_game_moves = move_data.get_game_moves(1)\n",
+    "    first_game_moves = basic_move_data.get_game_moves(1)\n",
     "    display(first_game_moves)"
    ]
   }
