Begin metadata exploration

--- a/Analysis/large_dataset_experimentation.ipynb
+++ b/Analysis/large_dataset_experimentation.ipynb
@@ -1224,6 +1224,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4c38ae4",
+   "metadata": {},
+   "source": [
+    "## Save Hikaru metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb851932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean_meta.to_csv('../Data/hikaru_metadata_dataframe.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9842f49",
    "metadata": {},
    "source": [
@@ -4015,22 +4033,6 @@
     "    print('-------------------')\n",
     "    display(moves_dict_test[i])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "055b0911",
-   "metadata": {},
-   "source": [
-    "## 5.1 Metadata Column Investigation - White & Black"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9039b346",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
