Began Event column analysis

--- a/Analysis/hikaru_metadata_column_exploration.ipynb
+++ b/Analysis/hikaru_metadata_column_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "bbec664f",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aac35f2e",
    "metadata": {},
    "outputs": [],
@@ -65,8 +65,327 @@
     "hikaru_mv_dict = load('../Data/hikaru_moves_dictionary.joblib')\n",
     "\n",
     "# Load the metadata dataframe\n",
-    "hikaru_meta_df = pd.read_csv('../Data/hikaru_metadata_dataframe.csv', index_col='Game_ID')"
+    "hikaru_meta_df_raw = pd.read_csv('../Data/hikaru_metadata_dataframe.csv', index_col='Game_ID')\n",
+    "hikaru_meta_df = MetaDataCleaner.clean_metadata(hikaru_meta_df_raw)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "202a298d",
+   "metadata": {},
+   "source": [
+    "## 2. Quick data check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a5c2c33",
+   "metadata": {},
+   "source": [
+    "### I. Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "242aefa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>CurrentPosition</th>\n",
+       "      <th>Timezone</th>\n",
+       "      <th>ECO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TimeControl</th>\n",
+       "      <th>Termination</th>\n",
+       "      <th>StartTime</th>\n",
+       "      <th>EndDate</th>\n",
+       "      <th>EndTime</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>SetUp</th>\n",
+       "      <th>FEN</th>\n",
+       "      <th>Variant</th>\n",
+       "      <th>Tournament</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Game_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9701</th>\n",
+       "      <td>Live Chess</td>\n",
+       "      <td>Chess.com</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Hikaru</td>\n",
+       "      <td>Keranke</td>\n",
+       "      <td>1-0</td>\n",
+       "      <td>3r2k1/p2P1p1p/6p1/4q3/8/1P3P2/P2Q2PP/3R2K1 b - -</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>A01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Hikaru won by resignation</td>\n",
+       "      <td>0 days 16:32:22</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0 days 16:33:32</td>\n",
+       "      <td>https://www.chess.com/game/live/1628869910</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9702</th>\n",
+       "      <td>Live Chess</td>\n",
+       "      <td>Chess.com</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Keranke</td>\n",
+       "      <td>Hikaru</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>r1q1k1nr/ppp1pp2/3p2p1/1P5p/2P5/2bP1PP1/P4PKP/...</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>A10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Hikaru won by resignation</td>\n",
+       "      <td>0 days 16:33:41</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0 days 16:34:06</td>\n",
+       "      <td>https://www.chess.com/game/live/1628871326</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9703</th>\n",
+       "      <td>Live Chess</td>\n",
+       "      <td>Chess.com</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Hikaru</td>\n",
+       "      <td>Keranke</td>\n",
+       "      <td>1-0</td>\n",
+       "      <td>r3r3/p1B2kpp/1p6/3P1p2/2P1n3/1P2P1PP/P1R3K1/R7...</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>A01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Hikaru won by resignation</td>\n",
+       "      <td>0 days 16:34:16</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0 days 16:35:17</td>\n",
+       "      <td>https://www.chess.com/game/live/1628871923</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Event       Site Date  Round    White    Black Result  \\\n",
+       "Game_ID                                                               \n",
+       "9701     Live Chess  Chess.com  NaT   <NA>   Hikaru  Keranke    1-0   \n",
+       "9702     Live Chess  Chess.com  NaT   <NA>  Keranke   Hikaru    0-1   \n",
+       "9703     Live Chess  Chess.com  NaT   <NA>   Hikaru  Keranke    1-0   \n",
+       "\n",
+       "                                           CurrentPosition Timezone  ECO  ...  \\\n",
+       "Game_ID                                                                   ...   \n",
+       "9701      3r2k1/p2P1p1p/6p1/4q3/8/1P3P2/P2Q2PP/3R2K1 b - -      UTC  A01  ...   \n",
+       "9702     r1q1k1nr/ppp1pp2/3p2p1/1P5p/2P5/2bP1PP1/P4PKP/...      UTC  A10  ...   \n",
+       "9703     r3r3/p1B2kpp/1p6/3P1p2/2P1n3/1P2P1PP/P1R3K1/R7...      UTC  A01  ...   \n",
+       "\n",
+       "        TimeControl                Termination       StartTime  EndDate  \\\n",
+       "Game_ID                                                                   \n",
+       "9701             60  Hikaru won by resignation 0 days 16:32:22      NaT   \n",
+       "9702             60  Hikaru won by resignation 0 days 16:33:41      NaT   \n",
+       "9703             60  Hikaru won by resignation 0 days 16:34:16      NaT   \n",
+       "\n",
+       "                EndTime                                        Link SetUp  \\\n",
+       "Game_ID                                                                     \n",
+       "9701    0 days 16:33:32  https://www.chess.com/game/live/1628869910  <NA>   \n",
+       "9702    0 days 16:34:06  https://www.chess.com/game/live/1628871326  <NA>   \n",
+       "9703    0 days 16:35:17  https://www.chess.com/game/live/1628871923  <NA>   \n",
+       "\n",
+       "          FEN Variant Tournament  \n",
+       "Game_ID                           \n",
+       "9701     <NA>    <NA>       <NA>  \n",
+       "9702     <NA>    <NA>       <NA>  \n",
+       "9703     <NA>    <NA>       <NA>  \n",
+       "\n",
+       "[3 rows x 25 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(hikaru_meta_df.iloc[9700:9703])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d202f6f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 50146 entries, 1 to 50146\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column           Non-Null Count  Dtype          \n",
+      "---  ------           --------------  -----          \n",
+      " 0   Event            50130 non-null  string         \n",
+      " 1   Site             50130 non-null  string         \n",
+      " 2   Date             0 non-null      datetime64[ns] \n",
+      " 3   Round            0 non-null      Int64          \n",
+      " 4   White            50130 non-null  string         \n",
+      " 5   Black            50130 non-null  string         \n",
+      " 6   Result           50146 non-null  string         \n",
+      " 7   CurrentPosition  50130 non-null  string         \n",
+      " 8   Timezone         50130 non-null  string         \n",
+      " 9   ECO              49676 non-null  string         \n",
+      " 10  ECOUrl           49676 non-null  string         \n",
+      " 11  UTCDate          0 non-null      datetime64[ns] \n",
+      " 12  UTCTime          50130 non-null  timedelta64[ns]\n",
+      " 13  WhiteElo         50130 non-null  Int64          \n",
+      " 14  BlackElo         50130 non-null  Int64          \n",
+      " 15  TimeControl      50130 non-null  string         \n",
+      " 16  Termination      50130 non-null  string         \n",
+      " 17  StartTime        50130 non-null  timedelta64[ns]\n",
+      " 18  EndDate          0 non-null      datetime64[ns] \n",
+      " 19  EndTime          50130 non-null  timedelta64[ns]\n",
+      " 20  Link             50130 non-null  string         \n",
+      " 21  SetUp            1846 non-null   Int64          \n",
+      " 22  FEN              1846 non-null   string         \n",
+      " 23  Variant          1105 non-null   string         \n",
+      " 24  Tournament       2767 non-null   string         \n",
+      "dtypes: Int64(4), datetime64[ns](3), string(15), timedelta64[ns](3)\n",
+      "memory usage: 10.1 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hikaru_meta_df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af29e9a9",
+   "metadata": {},
+   "source": [
+    "## 3. Metadata Column Exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7fdac70",
+   "metadata": {},
+   "source": [
+    "### I. Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "26d6242f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique event values: 20\n",
+      "Event value counts: \n",
+      "Event\n",
+      "Live Chess                       48063\n",
+      "Live Chess - Odds Chess            777\n",
+      "Live Chess - Chess960              704\n",
+      "Let's Play!                        174\n",
+      "Live Chess - Three-Check           167\n",
+      "Live Chess - Crazyhouse            140\n",
+      "Live Chess - King of the Hill       91\n",
+      "Name: count, dtype: Int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unique Event values\n",
+    "print(f'Unique event values: {hikaru_meta_df['Event'].nunique()}')\n",
+    "# event_count = hikaru_meta_df['Event'].value_counts()\n",
+    "# for count in event_count:\n",
+    "#     print(count)\n",
+    "\n",
+    "print(f'Event value counts: \\n{hikaru_meta_df['Event'].value_counts().head(7)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "643cd699",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
