Exploration of Event, Site, Round, White, and Black columns

--- a/Analysis/hikaru_metadata_column_exploration.ipynb
+++ b/Analysis/hikaru_metadata_column_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "bbec664f",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "aac35f2e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "242aefa7",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "d202f6f3",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "26d6242f",
    "metadata": {},
    "outputs": [
@@ -380,12 +380,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88c593a5",
+   "metadata": {},
+   "source": [
+    "### II. Site"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "643cd699",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique sites: 1\n",
+      "\n",
+      "Site counts:\n",
+      "Site\n",
+      "Chess.com    50130\n",
+      "Name: count, dtype: Int64\n",
+      "\n",
+      "All sites are from chess.com and therefore will be removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of unique sites: {hikaru_meta_df['Site'].nunique()}\\n')\n",
+    "print(f'Site counts:')\n",
+    "print(hikaru_meta_df['Site'].value_counts())\n",
+    "print('\\nAll sites are from chess.com and therefore will be removed')\n",
+    "hikaru_meta_df_2 = hikaru_meta_df.drop('Site',axis=1,errors='ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd618921",
+   "metadata": {},
+   "source": [
+    "### III. Date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "96776832",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Dates are parsed incorrectly by cleaner class method. Needs fixing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57ff98d2",
+   "metadata": {},
+   "source": [
+    "### IV. Round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "75069ebe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique round values: 0\n",
+      "\n",
+      "Round value:\n",
+      "Series([], Name: count, dtype: Int64)\n",
+      "\n",
+      "All rounds are NaN and therefore will be removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of unique round values: {hikaru_meta_df_2['Round'].nunique()}')\n",
+    "print('\\nRound value:')\n",
+    "print(hikaru_meta_df_2['Round'].value_counts())\n",
+    "print('\\nAll rounds are NaN and therefore will be removed')\n",
+    "hikaru_meta_df_3 = hikaru_meta_df_2.drop('Round', axis=1, errors='ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c14fbfe",
+   "metadata": {},
+   "source": [
+    "### V. White and Black"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "344b4e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique competitors playing white: 3116\n",
+      "Unique competitors playing black: 3387\n",
+      "\n",
+      "Hikaru oppenent playing white frequencies:\n",
+      "White\n",
+      "DanielNaroditsky     1292\n",
+      "Firouzja2003          803\n",
+      "hansen                654\n",
+      "penguingm1            546\n",
+      "Yaacovn               542\n",
+      "Bigfish1995           486\n",
+      "wonderfultime         459\n",
+      "Oleksandr_Bortnyk     424\n",
+      "Jospem                365\n",
+      "Robert_Chessmood      335\n",
+      "Name: count, dtype: Int64\n",
+      "\n",
+      "Hikaru opponent playing black relative frequencies:\n",
+      "Black\n",
+      "DanielNaroditsky     2.571315\n",
+      "Firouzja2003          1.60383\n",
+      "hansen               1.314582\n",
+      "penguingm1           1.101137\n",
+      "Yaacovn              1.089168\n",
+      "Bigfish1995          0.983443\n",
+      "wonderfultime        0.923599\n",
+      "Oleksandr_Bortnyk    0.865749\n",
+      "Jospem               0.738081\n",
+      "Robert_Chessmood     0.666268\n",
+      "Name: proportion, dtype: Float64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numeric insights\n",
+    "print(f'Unique competitors playing white: {hikaru_meta_df_3['White'].nunique()}')\n",
+    "print(f'Unique competitors playing black: {hikaru_meta_df_3['Black'].nunique()}')\n",
+    "print()\n",
+    "\n",
+    "print('Hikaru oppenent playing white frequencies:')\n",
+    "print(hikaru_meta_df_3['White'].value_counts()[1:11])\n",
+    "print()\n",
+    "\n",
+    "print('Hikaru opponent playing black relative frequencies:')\n",
+    "print(hikaru_meta_df_3['Black'].value_counts(normalize=True)[1:11]*100)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a37033b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
